<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    android:overScrollMode="ifContentScrolls"
    android:persistentDrawingCache="scrolling"
    android:scrollbarStyle="outsideInset"
    android:scrollbars="horizontal|vertical"
    app:layout_scrollFlags="scroll"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:text="@string/tvTitle"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvAmountCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/amount_currency_label" />

            <EditText
                android:id="@+id/etAmountCurrency"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/amount_currency_hint"
                android:importantForAutofill="no"
                android:inputType="textPersonName|numberDecimal"
                android:minHeight="48dp"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/result_label" />

            <EditText
                android:id="@+id/etResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:enabled="false"
                android:importantForAutofill="no"
                android:inputType="textPersonName|numberDecimal"
                android:minHeight="48dp"
                android:textAlignment="center"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvCurrencyIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/currency_in_label" />

            <Spinner
                android:id="@+id/spinnerCurrencyIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/tvCurrencyOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/currency_out_label" />

            <Spinner
                android:id="@+id/spinnerCurrencyOut"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <RadioButton
                    android:id="@+id/rBtnRCB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_button_rcb" />

                <RadioButton
                    android:id="@+id/rBtnBuying"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button_buying" />

                <RadioButton
                    android:id="@+id/rBtnSelling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_button_selling" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvMyRate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Ваш курс:" />

            <EditText
                android:id="@+id/etRate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textPersonName|numberDecimal"
                android:minHeight="48dp"
                android:textAlignment="center"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/btnCalculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/button_calculate" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvInfoCurIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/tvInfoCurOut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />

                <TextView
                    android:id="@+id/tvInfoRate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>